# AssistantAgent

./: .gitignore  agentic.py  collection_configs.yaml  conda.yaml  docker-compose-postgresql.yml  pyproject.toml  requirements.txt  run.py
.streamlit/: config.toml  secrets.toml
app/: api.py  config.py  main.py  settings.py  ui.py
app/connection/milvus/: milvus_connector.py
app/routers/: __init__.py  request_model.py  routers.py
app/schemas/: chat.py
app/services/graph/: __init__.py  audio_graph.py  config.py
app/services/graph/brain/nodes/: brain.py  brainstorming.py  generate_sketch_concept.py  refine_answer_from_gg.py  refine_query_for_gg.py  response_anwser.py
app/services/graph/brain/prompts/: brainstorming.py  google_search.py  sketch_ideas.py  system_prompts.py  tool_selection.py
app/services/graph/document_extractor/: extractor.py
app/services/graph/ears/: hear.py
app/services/graph/eyes/: __init__.py  eye.py
app/services/graph/hand/: draw.py
app/services/graph/mouth/: mouth.py
app/services/graph/tools/: pdf_loader.py  select_tools.py
app/utils/: llm.py  setting_loader.py
